# convergence

./: Cargo.toml  README.md  install.sh  uninstall.sh
.github/workflows/: build-and-release.yml
.trunk/: trunk.yaml
convergence.lv2/: .convergence.ttl.swp  convergence.ttl  manifest.ttl
src/: lib.rs  pvoc.rs
